more functionality for ratings

--- a/app/views/starrable/_stars.html.erb
+++ b/app/views/starrable/_stars.html.erb
@@ -1,6 +1,22 @@
-<div class="rateit" data-rateableid="<%= @gallery.id %>" data-rateit-value="<%= @gallery.average_rating %>" data-rateit-ispreset="true"></div>
-<span itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
-  <span itemprop="ratingValue"><%= starrable.average_rating %></span> stars out of
-  <span itemprop="bestRating"><%= starrable.max_rating %></span>
-  (<span itemprop="ratingCount"><%= pluralize(starrable.ratings.count, 'rating') %></span> total).
-</span>
+<% if user_signed_in? %>
+  <% rating = ActsAsStarrable::Rating.find(:first, :conditions => {:rater_type => 'User', :rater_id => current_user.id, :starrable_type => starrable.class, :starrable_id => starrable.id}) %>
+  <%= javascript_tag do %>
+    window.rater = '<%= current_user.id %>';
+    window.rating = <%= rating ? rating.id : 'null' %>;
+  <% end %>
+<% end %>
+<% if rating %>
+  <div class="rateit" data-rateableid="<%= starrable.id %>" data-rateit-value="<%= rating.rating %>" data-rateit-ispreset="false"></div>
+  <span itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">avg.
+    <span itemprop="ratingValue"><%= starrable.average_rating %></span> stars out of
+    <span itemprop="bestRating"><%= starrable.max_rating %></span>
+    (<span itemprop="ratingCount"><%= pluralize(starrable.ratings.count, 'rating') %></span> total).
+  </span>
+<% else %>
+  <div class="rateit" data-rateableid="<%= starrable.id %>" data-rateit-value="<%= starrable.average_rating %>" data-rateit-ispreset="true" data-rateit-resetable="false" data-rateit-readonly="<%= !user_signed_in? %>"></div>
+  <span itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+    <span itemprop="ratingValue"><%= starrable.average_rating %></span> stars out of
+    <span itemprop="bestRating"><%= starrable.max_rating %></span>
+    (<span itemprop="ratingCount"><%= pluralize(starrable.ratings.count, 'rating') %></span> total).
+  </span>
+<% end %>
